Add install script

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,6 +55,14 @@ target_include_directories(nodes INTERFACE "include")
 target_compile_definitions(nodes PUBLIC "-DNODE_EDITOR_SHARED")
 target_compile_definitions(nodes PRIVATE "-DNODE_EDITOR_EXPORTS")
 
+install(TARGETS nodes 
+	RUNTIME DESTINATION bin
+	LIBRARY DESTINATION lib
+	ARCHIVE DESTINATION lib
+)
+
+
+
 target_link_libraries(nodes
                       Qt5::Core
                       Qt5::Widgets
